--- a/index.html
+++ b/index.html
@@ -342,41 +342,37 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">University school of the arts</h4>
+              <h4 class="h4 timeline-item-title">Indian Institute Of Technology Manipur</h4>
 
-              <span>2007 — 2008</span>
+              <span>2021 — 2025</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                BTech Computer Science Engineer
+       
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">New york academy of art</h4>
+              <h4 class="h4 timeline-item-title">The Psbb Millenium School</h4>
 
-              <span>2006 — 2007</span>
+              <span>2015-2020</span>
 
               <p class="timeline-text">
-                Ratione voluptatem sequi nesciunt, facere quisquams facere menda ossimus, omnis voluptas assumenda est
-                omnis..
+            CSE & PCM , CBSE
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">High school of art and design</h4>
+              <h4 class="h4 timeline-item-title">New Digambar Public School</h4>
 
-              <span>2002 — 2004</span>
+              <span>2005 — 2015</span>
 
               <p class="timeline-text">
-                Duis aute irure dolor in reprehenderit in voluptate, quila voluptas mag odit aut fugit, sed consequuntur
-                magni dolores
-                eos.
+                Maths and Science,CBSE
               </p>
 
             </li>
