--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Indian Institute Of Technology Manipur</h4>
+              <h4 class="h4 timeline-item-title">Indian Institute Of Technology , Manipur</h4>
 
               <span>2021 — 2025</span>
 
@@ -354,8 +354,8 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">The Psbb Millenium School</h4>
-
+              <h4 class="h4 timeline-item-title">The Psbb Millenium School , Chennai , TN</h4>
+ 
               <span>2015-2020</span>
 
               <p class="timeline-text">
@@ -366,7 +366,7 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">New Digambar Public School</h4>
+              <h4 class="h4 timeline-item-title">New Digambar Public School,Indore,MP</h4>
 
               <span>2005 — 2015</span>
 
