--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">The Psbb Millenium School , Chennai , TN</h4>
+              <h4 class="h4 timeline-item-title">The Psbb Millenium School , Chennai , Tamil Nadu</h4>
  
               <span>2015-2020</span>
 
@@ -366,12 +366,12 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">New Digambar Public School,Indore,MP</h4>
+              <h4 class="h4 timeline-item-title">New Digambar Public School, Indore , Madhya Pradesh</h4>
 
               <span>2005 — 2015</span>
 
               <p class="timeline-text">
-                Maths and Science,CBSE
+                Maths and Science , CBSE
               </p>
 
             </li>
@@ -393,9 +393,9 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Creative director</h4>
+              <h4 class="h4 timeline-item-title">SkyTrade - BlockChain Engineering Intern </h4>
 
-              <span>2015 — Present</span>
+              <span>Jan'24 — Present</span>
 
               <p class="timeline-text">
                 Nemo enim ipsam voluptatem blanditiis praesentium voluptum delenit atque corrupti, quos dolores et qvuas
@@ -407,9 +407,9 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Art director</h4>
+              <h4 class="h4 timeline-item-title">Invactor - BlockChain Engineering Intern</h4>
 
-              <span>2013 — 2015</span>
+              <span>Aug'23 — Nov'23</span>
 
               <p class="timeline-text">
                 Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
@@ -421,83 +421,79 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Web designer</h4>
+              <h4 class="h4 timeline-item-title">Chegg - Subject Matter Expert</h4>
 
-              <span>2010 — 2013</span>
+              <span>Jun'22 — Aug'22</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                   Involved in organising events of Coding Ninjas at the college campus. 
+
               </p>
 
             </li>
 
           </ol>
 
-        </section>
-
-        <section class="skill">
-
-          <h3 class="h3 skills-title">My skills</h3>
-
-          <ul class="skills-list content-card">
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">Web design</h5>
-                <data value="80">80%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 80%;"></div>
-              </div>
-
-            </li>
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">Graphic design</h5>
-                <data value="70">70%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 70%;"></div>
-              </div>
-
-            </li>
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">Branding</h5>
-                <data value="90">90%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 90%;"></div>
-              </div>
-
-            </li>
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">WordPress</h5>
-                <data value="50">50%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 50%;"></div>
-              </div>
-
-            </li>
-
-          </ul>
-
-        </section>
+          <section class="skills">
+            <h3 class="skills-title">Technical Skills and Interests</h3>
+            <ul class="skills-list">
+              <li class="skills-item">
+                <div class="title-wrapper">
+                  <h5 class="h5">Languages</h5>
+                  <data value="100">C/C++, GoLang , Python, Solidity, Javascript, HTML+CSS , Latex</data>
+                </div>
+                <div class="skill-progress-bg">
+                  <div class="skill-progress-fill" style="width: 100%;"></div>
+                </div>
+              </li>
+              <li class="skills-item">
+                <div class="title-wrapper">
+                  <h5 class="h5">Technologies</h5>
+                  <data value="100">DeFi, Aave ,Compound , Ethereum , Polygon ,Solana , Binance , ERC20, ERC721 , ERC1155 , Truffle, Hardhat, Smart Contracts ,DApp , Ganache , Remix, MERN/MEAN Stack</data>
+                </div>
+                <div class="skill-progress-bg">
+                  <div class="skill-progress-fill" style="width: 100%;"></div>
+                </div>
+              </li>
+              <li class="skills-item">
+                <div class="title-wrapper">
+                  <h5 class="h5">Libraries</h5>
+                  <data value="100">C++ STL, ReactJs</data>
+                </div>
+                <div class="skill-progress-bg">
+                  <div class="skill-progress-fill" style="width: 100%;"></div>
+                </div>
+              </li>
+              <li class="skills-item">
+                <div class="title-wrapper">
+                  <h5 class="h5">Web Dev Tools</h5>
+                  <data value="100">Uniswap V2/V3 , Pancake.sol , NodeJS, VScode, Git, Github, NextJS , expressJS</data>
+                </div>
+                <div class="skill-progress-bg">
+                  <div class="skill-progress-fill" style="width: 100%;"></div>
+                </div>
+              </li>
+              <li class="skills-item">
+                <div class="title-wrapper">
+                  <h5 class="h5">Frameworks</h5>
+                  <data value="100">Bootstrap, Tailwind-CSS</data>
+                </div>
+                <div class="skill-progress-bg">
+                  <div class="skill-progress-fill" style="width: 100%;"></div>
+                </div>
+              </li>
+              <li class="skills-item">
+                <div class="title-wrapper">
+                  <h5 class="h5">Cloud/Databases</h5>
+                  <data value="100">MongoDb, Relational Database(mySql), ElasticSearch , PostgreSql</data>
+                </div>
+                <div class="skill-progress-bg">
+                  <div class="skill-progress-fill" style="width: 100%;"></div>
+                </div>
+              </li>
+            </ul>
+          </section>
+          
 
       </article>
 
