--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#">
+              <a href="https://github.com/annuraagggIIIT/CryptoFlow_Manager.git">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -588,9 +588,9 @@
                   <img src="./assets/images/project-3.jpg" alt="fundo" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Fundo</h3>
+                <h3 class="project-title">Supply Chain Management With BlockChain</h3>
 
-                <p class="project-category">Web design</p>
+                <p class="project-category">DApp</p>
 
               </a>
             </li>
